compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_subject_pattern_unify.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 271
expression: "case 1.0 { 1 -> 1 }"
---
----- SOURCE CODE
case 1.0 { 1 -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:12
  │
1 │ case 1.0 { 1 -> 1 }
  │            ^

Expected type:

    Float

Found type:

    Int
